force-app/main/default/objects/StripeCharge__c/StripeCharge__c.object-meta.xml
<CustomObject>
    <label>Stripe Charge</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>StripeCharge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>