force-app/main/default/objects/StripeCharge__c/fields/Account_owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_Email__c</fullName>
    <label>Account owner Email</label>
    <type>Email</type>
</CustomField>