force-app/main/default/objects/StripeCharge__c/fields/Captured__c.field-meta.xml
<CustomField>
    <fullName>Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Captured</label>
    <type>Checkbox</type>
</CustomField>