force-app/main/default/objects/StripeCharge__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <label>Failure Message</label>
    <type>TextArea</type>
</CustomField>