force-app/main/default/objects/StripeCharge__c/fields/Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Id__c</fullName>
    <label>Receipt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>