force-app/main/default/objects/StripeCharge__c/fields/Receipt_Url__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Url__c</fullName>
    <label>Receipt Url</label>
    <type>Url</type>
</CustomField>