force-app/main/default/objects/StripeCharge__c/fields/StripeChargeId__c.field-meta.xml
<CustomField>
    <fullName>StripeChargeId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Charge Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>