force-app/main/default/objects/StripeCharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Invoice_Id__c</columns>
    <columns>Paid__c</columns>
    <columns>Status__c</columns>
    <columns>Currency__c</columns>
    <columns>Amount_Refunded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>